--- a/src/review1/allRastaurant.form
+++ b/src/review1/allRastaurant.form
@@ -112,7 +112,7 @@
         <Property name="maximumRowCount" type="int" value="10"/>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="78">
-            <StringItem index="0" value="--&#xe01;&#xe23;&#xe38;&#xe13;&#xe32;&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;&#xe08;&#xe31;&#xe07;&#xe2b;&#xe27;&#xe31;&#xe14;--"/>
+            <StringItem index="0" value="&#xe23;&#xe49;&#xe32;&#xe19;&#xe17;&#xe31;&#xe49;&#xe07;&#xe2b;&#xe21;&#xe14;"/>
             <StringItem index="1" value="&#xe01;&#xe23;&#xe38;&#xe07;&#xe40;&#xe17;&#xe1e;&#xe21;&#xe2b;&#xe32;&#xe19;&#xe04;&#xe23;"/>
             <StringItem index="2" value="&#xe2a;&#xe21;&#xe38;&#xe17;&#xe23;&#xe1b;&#xe23;&#xe32;&#xe01;&#xe32;&#xe23;"/>
             <StringItem index="3" value="&#xe19;&#xe19;&#xe17;&#xe1a;&#xe38;&#xe23;&#xe35;"/>
